--- a/.githab/workflows/deploy.yml
+++ b/.githab/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
      run: npm ci
    - name: Deploy with gh-pages
      env:
-      MY_EMAIL: zanyri880@gmail.com
-      MY_NAME: ZANYRI
+      MY_EMAIL: NakuzzZ@yandex.ru
+      MY_NAME: denisKuzzz
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
      run: |
        git config --global user.email $MY_EMAIL
