--- a/.githab/workflows/deploy.yml
+++ b/.githab/workflows/deploy.yml
@@ -1,26 +1,37 @@
-name: Deploy to github pages
+name: Release
 on:
- push:
-  branches: [ main ]
+  push:
+    branches:
+      - main
+permissions:
+  contents: read
 jobs:
- gh-pages-deploy:
-  runs-on: ubuntu-latest
-  steps:
-   - name: Checkout branch
-     uses: actions/checkout@v2
-   - name: Setup Node.js for use with actions
-     uses: actions/setup-node@v2
-     with:
-      version: 20.10.0
-   - name: Clean install dependencies
-     run: npm ci
-   - name: Deploy with gh-pages
-     env:
-      MY_EMAIL: NakuzzZ@yandex.ru
-      MY_NAME: denisKuzzz
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-     run: |
-       git config --global user.email $MY_EMAIL
-       git config --global user.name $MY_NAME
-       git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-       npm run deploy
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "20.10.0"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
+
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
